Completed website redesign
- Changed layout on home, skills, and projects pages
- Restyled the entire website
- Added pictures for several projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <title>Mohamed Moussa</title>
     </head>
-    <body>
+    <body class="home">
         <!-- Fixed navbar -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -48,32 +48,27 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border titleContainer">
-                <h1 class="pageTitle">About me</h1>
-            </div>
-            <div class="aboutGroup">
-                <div class="row">
-                    <div class="col-md-9">
-                        <p class="lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
-                        <div class="text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
-                            myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
-                            development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
-                            and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
-                            national finals. When not in class or studying I can often be found participating in hackathons and business events.<br><br>
-                            To learn more about me, check out my <a href="Resume.pdf">resume</a>.
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <br class="text"><br class="text">
-                        <img src="profile.png" alt="My picture" class="profile-pic"/>
-                    </div>
+            <div class="home-page-text">
+                <div class="home-title">
+                    <img src="profile.png" alt="My picture" class="profile-pic"/>
+                    <h1 class="pageTitle">About me</h1>
                 </div>
+                <section class="home-section">
+                    <p class="home-lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
+                    <div class="home-text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
+                        myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
+                        development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
+                        and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
+                        national finals. When not in class or studying I can often be found participating in hackathons and business events.<br><br>
+                        To learn more about me, check out my <a href="Resume.pdf">resume</a>.
+                    </div>
+                </section>
             </div>
         </div>
 
         <footer class="footer">
             <div class="container">
-                <p class="text-muted footer-text">&copy 2015</p>
+                <p class="text-muted footer-text">&copy 2015 | Mohamed Moussa</p>
             </div>
         </footer>
 
