--- a/projects.html
+++ b/projects.html
@@ -48,115 +48,130 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border titleContainer">
+            <div class="titleContainer">
                 <h1 class="pageTitle">My projects</h1>
             </div>
-            <div class="projectGroup">
-                <p class="lead">2015: Smiley No More</p>
-                <ul>
-                    <li class="text">A FPS game where you try to survive as long as possible and get as high a score as possible</li>
-                    <li class="text">The game is 3D and includes animation</li>
-                    <li class="text">Game is functioning but not yet completed</li>
-                    <li class="text">This game is made using JavaScript and C#, along with the Unity game engine</li>
-                    <li class="text">Play the game <a href="Smiley_No_More">here</a></li>
-                </ul>
-            </div>
-            <div class="projectGroup">
-                <p class="lead">2015: Sisi Fighter</p>
-                <ul>
-                    <li class="text">I built a battle game where you, as the player, battle instances of Egypt's leader Abdel Fattah el-Sisi</li>
-                    <li class="text">The game follows the style of a pokemon battle to some extent, but with the battle ongoing for 10 incarnations of Sisi</li>
-                    <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
-                    <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
-                    <li class="text">This game is made using python, with use of Tkinter for the GUI</li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-Fighter">here</a></li>
-                    <li class="text">Download the game for Mac <a href="Sisi Fighter.zip">here</a></li>
-                    <li class="text">Download the game for Windows <a href="Sisi Fighter Windows.zip">here</a></li>
-                </ul>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2015: Egypt Simulator</p>
-                <ul>
-                    <li class="text">I built a very limited simulator of Egypt to mock the current political situation</li>
-                    <li class="text">The simulator, while having some substance and accuracy, is highly satirical!</li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Egypt-simulator">here</a></li>
-                </ul>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: Terminal TicTacToe</p>
-                <ul>
-                    <li class="text">I built the game TicTacToe to be played in the terminal</li>
-                    <li class="text">The game can be played against a friend or a computer</li>
-                    <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
-                    <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
-                    <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
-                </ul>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: Nerf Firestrike SolidWorks Assembly</p>
-                <ul>
-                    <li class="text">I made most of the parts of the Firestrike using SolidWorks</li>
-                    <li class="text">I took the parts and assembled them together using SolidWorks</li>
-                    <li class="text">This project was completed as part of the SYDE 101L Graphics Lab course</li>
-                </ul>
-                <div class="row">
-                    <div class="col-md-4"><img src="Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
-                    <div class="col-md-4"><img src="Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
-                    <div class="col-md-4"><img src="Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
-                </div>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: 24 Hour Startup</p>
-                <div class="row">
-                    <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2015: Smiley No More</p>
                         <ul>
-                            <li class="text">Started the start-up company Citivate along with 5 other team members</li>
+                            <li class="text">A FPS game where you try to survive as long as possible and get as high a score as possible</li>
+                            <li class="text">The game is 3D and includes animation</li>
+                            <li class="text">The game is functioning but not yet completed</li>
+                            <li class="text">This game is made using the Unity game engine</li>
+                            <li class="text">Player control is accomplished using JavaScript and C# scripts</li>
+                            <li class="text">Play the game <a href="Smiley_No_More">here</a> (you may need to install Unity Web Player)</li>
+                        </ul>
+                        <img src="smiley_game_screenshot.png" alt="Smiley No More game" class="smiley-game-pic"/>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2015: Sisi Fighter</p>
+                        <ul>
+                            <li class="text">A battle game where you, as the player, battle Egypt's leader Abdel Fattah el-Sisi</li>
+                            <li class="text">The game loosely follows the style of a pokemon battle, but with the battle ongoing for 10 incarnations of Sisi</li>
+                            <li class="text">Both the player and Sisi have different moves they can use, and each has associated probabilities</li>
+                            <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
+                            <li class="text">This game is made using python, with use of Tkinter for the GUI</li>
+                            <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-Fighter">here</a></li>
+                            <li class="text">Download the game for Mac <a href="Sisi Fighter.zip">here</a></li>
+                            <li class="text">Download the game for Windows <a href="Sisi Fighter Windows.zip">here</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="clearfix visible-md-block visible-lg-block"></div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2015: Egypt Simulator</p>
+                        <ul>
+                            <li class="text">I built a very limited simulator of Egypt to mock the current political situation</li>
+                            <li class="text">The simulator, while having some substance and accuracy, is highly satirical!</li>
+                            <li class="text">The simulator is a simple text-based command-line tool built with Python and can only be run with it</li>
+                            <li class="text">Check out the code <a href="https://github.com/mmmoussa/Egypt-simulator">here</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2014: Terminal TicTacToe</p>
+                        <ul>
+                            <li class="text">I built the game TicTacToe to be played in the terminal</li>
+                            <li class="text">The game can be played against a friend or a computer</li>
+                            <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
+                            <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
+                            <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
+                            <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="Group">
+                        <p class="lead">2014: Nerf Firestrike SolidWorks Assembly</p>
+                        <ul>
+                            <li class="text">I made most of the parts of the Firestrike using SolidWorks</li>
+                            <li class="text">I took the parts and assembled them together using SolidWorks</li>
+                            <li class="text">This project was completed as part of the SYDE 101L Graphics Lab course</li>
+                        </ul>
+                        <div class="row">
+                            <div class="col-md-4"><img src="Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
+                            <div class="col-md-4"><img src="Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
+                            <div class="col-md-4"><img src="Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2014: 24 Hour Startup</p>
+                        <ul>
+                            <li class="text">Founded the start-up company Citivate along with 5 other team members</li>
+                            <li class="text">In 24 hours created a full business plan and partially working product</li>
                             <li class="text">The team built a website and mobile application</li>
-                            <li class="text">I worked on building the website using Bootstrap and MongoDB</li>
+                            <li class="text">I worked on building the website using Bootstrap</li>
                             <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
                             <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                         </ul>
-                    </div>
-                    <div class="col-md-2">
                         <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
                     </div>
                 </div>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: Waterloo EngHack Fall 2014</p>
-                <ul>
-                    <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
-                    <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
-                    <li class="text">Won second place</li>
-                    <li class="text">Check out the game <a href="http://jhudson.ca/myorunaway/">here</a></li>
-                    <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
-                </ul>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: Math Tester</p>
-                <ul>
-                    <li class="text">Built a math quiz console application using C++</li>
-                    <li class="text">The quiz keeps track of progress during a session</li>
-                    <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
-                </ul>
-            </div>
-            <br>
-            <div class="projectGroup">
-                <p class="lead">2014: Nerf Weapon Randomizer</p>
-                <ul>
-                    <li class="text">Built a console application with versions in both C++ and Python</li>
-                    <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
-                    <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
-                    <li class="text">Check out the code <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
-                </ul>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2014: Waterloo EngHack Fall 2014</p>
+                        <ul>
+                            <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
+                            <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
+                            <li class="text">Won second place</li>
+                            <li class="text">Entire project finished in under 24 hours</li>
+                            <li class="text">Check out the game <a href="http://jhudson.ca/myorunaway/">here</a></li>
+                            <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
+                        </ul>
+                        <img src="Myo_runaway_screenshot.png" alt="Myo Runaway game" class="myo-game-pic"/>
+                    </div>
+                </div>
+                <div class="clearfix visible-md-block visible-lg-block"></div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2014: Math Tester</p>
+                        <ul>
+                            <li class="text">Built a math quiz console application using C++</li>
+                            <li class="text">The quiz keeps track of progress during a session</li>
+                            <li class="text">Features include different difficulty levels as well as quizzes for addition, subtraction, multiplication, and division</li>
+                            <li class="text">Check out the code <a href="https://github.com/mmmoussa/Math-Tester">here</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Group">
+                        <p class="lead">2014: Nerf Weapon Randomizer</p>
+                        <ul>
+                            <li class="text">Built a console application with versions in both C++ and Python</li>
+                            <li class="text">The application provides the user with a list of random Nerf weapons that are pre-defined for a user-provided number of players</li>
+                            <li class="text">Features include different random weapons every time, as well as support for varying numbers of players</li>
+                            <li class="text">Check out the code <a href="https://github.com/mmmoussa/Nerf-Randomizer">here</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
