--- a/skills.html
+++ b/skills.html
@@ -48,12 +48,12 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border titleContainer">
+            <div class="titleContainer">
                 <h1 class="pageTitle">My skills</h1> 
             </div>
             <div class="row center">
-                <div class="col-sm-12 col-md-6">
-                    <div class="Group">
+                <div class="col-md-12">
+                    <div class="centerGroup">
                         <p class="lead">Programming Languages</p>
                         <div class="row center">
                             <div class="col-sm-6">
@@ -71,8 +71,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="Group">
+                <div class="col-md-6">
+                    <div class="centerGroup">
                         <p class="lead">Tools</p>
                             <div class="text">Xcode</div>
                             <div class="text">Unity</div>
@@ -80,8 +80,8 @@
                             <div class="text">SolidWorks</div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="Group">
+                <div class="col-md-6">
+                    <div class="centerGroup">
                         <p class="lead">Frameworks</p>
                             <div class="text">Bootstrap</div>
                             <div class="text">Tkinter</div>
