--- a/contact.html
+++ b/contact.html
@@ -51,16 +51,28 @@
 
         <!-- Begin page content -->
         <div class="container">
-            <div class="page-header page-header-border titleContainer">
+            <div class="titleContainer">
                 <h1 class="pageTitle">Contact me</h1>
             </div>
             <div class="Group">
-                <p class="lead center">Interested in learning more about me? Contact me through email or LinkedIn, or check out my projects on GitHub.</p>
+                <p class="contact-lead center">Contact or learn more about me through any of the following:</p>
                 <br>
                 <div class="row center">
-                    <div class="col-xs-4"><a href="mailto:mmmoussa@uwaterloo.ca"><i class="fa fa-envelope fa-5x"></i></a></div>
-                    <div class="col-xs-4"><a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/"><i class="fa fa-linkedin-square fa-5x"></i></a></div>
-                    <div class="col-xs-4"><a href="https://github.com/mmmoussa"><i class="fa fa-github fa-5x"></i></a></div>
+                    <div class="col-xs-4 contact-text">
+                        <a href="mailto:mmmoussa@uwaterloo.ca">
+                            <i class="fa fa-envelope fa-5x"></i>
+                        </a>
+                    </div>
+                    <div class="col-xs-4">
+                        <a href="https://ca.linkedin.com/pub/mohamed-moussa/a4/bab/8b2/">
+                            <i class="fa fa-linkedin-square fa-5x"></i>
+                        </a>
+                    </div>
+                    <div class="col-xs-4">
+                        <a href="https://github.com/mmmoussa">
+                            <i class="fa fa-github fa-5x"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
