Changed home page
Changed background and colour scheme of home page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h1 class="pageTitle">About me</h1>
                 </div>
                 <section class="home-section">
-                    <p class="home-lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
+                    <p class="lead">Mohamed Moussa, 1B Systems Design Engineering Student</p>
                     <div class="home-text">I am a hard-working and motivated individual with excellent time management and communication skills. I dedicate 
                         myself to self-improvement and am constantly looking for new and challenging problems. My passions are technology and software 
                         development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
