--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="index">About</a></li>
-                        <li><a class="navbar-text" href="skills">Skills</a></li>
-                        <li><a class="navbar-text" href="projects">Projects</a></li>
-                        <li class="active"><a class="navbar-text" href="contact">Contact</a></li>
+                        <li><a class="navbar-text" href="index"><i class="fa fa-user"></i> About</a></li>
+                        <li><a class="navbar-text" href="skills"><i class="fa fa-code"></i> Skills</a></li>
+                        <li><a class="navbar-text" href="projects"><i class="fa fa-wrench"></i> Projects</a></li>
+                        <li class="active"><a class="navbar-text" href="contact"><i class="fa fa-envelope"></i> Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
