--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,9 @@
         <!-- Custom styles for this template -->
         <link href="sticky-footer-navbar.css" rel="stylesheet">
 
+        <!-- Font Awesome icons link -->
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -37,10 +40,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="index">About</a></li>
-                        <li><a class="navbar-text" href="skills">Skills</a></li>
-                        <li class="active"><a class="navbar-text" href="projects">Projects</a></li>
-                        <li><a class="navbar-text" href="contact">Contact</a></li>
+                        <li><a class="navbar-text" href="index"><i class="fa fa-user"></i> About</a></li>
+                        <li><a class="navbar-text" href="skills"><i class="fa fa-code"></i> Skills</a></li>
+                        <li class="active"><a class="navbar-text" href="projects"><i class="fa fa-wrench"></i> Projects</a></li>
+                        <li><a class="navbar-text" href="contact"><i class="fa fa-envelope"></i> Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -123,7 +126,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="Group">
-                        <p class="lead">2014: 24 Hour Startup</p>
+                        <p class="lead"><i class="fa fa-trophy"></i> 2014: 24 Hour Startup</p>
                         <ul>
                             <li class="text">Founded the start-up company Citivate along with 5 other team members</li>
                             <li class="text">In 24 hours created a full business plan and partially working product</li>
@@ -137,7 +140,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="Group">
-                        <p class="lead">2014: Waterloo EngHack Fall 2014</p>
+                        <p class="lead"><i class="fa fa-trophy"></i> 2014: Waterloo EngHack Fall 2014</p>
                         <ul>
                             <li class="text">My team built a Waterloo-themed version of Temple Run for PC using JavaScript</li>
                             <li class="text">Integrated the Myo armband with the game using a Lua script for full non-contact gameplay</li>
