--- a/skills.html
+++ b/skills.html
@@ -14,6 +14,9 @@
         <!-- Custom styles for this template -->
         <link href="sticky-footer-navbar.css" rel="stylesheet">
 
+        <!-- Font Awesome icons link -->
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -37,10 +40,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="index">About</a></li>
-                        <li class="active tab-in-use"><a class="navbar-text" href="skills">Skills</a></li>
-                        <li><a class="navbar-text" href="projects">Projects</a></li>
-                        <li><a class="navbar-text" href="contact">Contact</a></li>
+                        <li><a class="navbar-text" href="index"><i class="fa fa-user"></i> About</a></li>
+                        <li class="active"><a class="navbar-text" href="skills"><i class="fa fa-code"></i> Skills</a></li>
+                        <li><a class="navbar-text" href="projects"><i class="fa fa-wrench"></i> Projects</a></li>
+                        <li><a class="navbar-text" href="contact"><i class="fa fa-envelope"></i> Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
