--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <i class="fa fa-angle-double-down"></i>
                     </button>
                     <div class="name-text">Mohamed Moussa</div>
                 </div>
