Re-organized website

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
 
         <!-- Font Awesome icons link -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
