--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
 
         <!-- Font Awesome icons link -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="home-page-text">
                 <div class="home-title">
-                    <img src="profile.png" alt="My picture" class="profile-pic"/>
+                    <img src="images/profile.png" alt="My picture" class="profile-pic"/>
                     <h1 class="pageTitle">About me</h1>
                 </div>
                 <section class="home-section">
@@ -61,7 +61,7 @@
                         development, and I am frequently learning new languages or working on side projects. I also make sure to make time for athletics 
                         and having fun. Until recently, I was a national-level springboard and platform diver, twice placing among the top 12 in the 
                         national finals. When not in class or studying I can often be found participating in hackathons and business events.<br><br>
-                        To learn more about me, check out my <a href="Resume.pdf">resume</a>.
+                        To learn more about me, check out my <a href="files/Resume.pdf">resume</a>.
                     </div>
                 </section>
             </div>
