--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,10 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
 
         <!-- Font Awesome icons link -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -64,7 +64,7 @@
                             <li class="text">Player control is accomplished using JavaScript and C# scripts</li>
                             <li class="text">Play the game <a href="Smiley_No_More">here</a> (you may need to install Unity Web Player)</li>
                         </ul>
-                        <img src="smiley_game_screenshot.png" alt="Smiley No More game" class="smiley-game-pic"/>
+                        <img src="images/smiley_game_screenshot.png" alt="Smiley No More game" class="smiley-game-pic"/>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -77,8 +77,8 @@
                             <li class="text">The game, while having some substance and accuracy, is highly satirical!</li>
                             <li class="text">This game is made using python, with use of Tkinter for the GUI</li>
                             <li class="text">Check out the code <a href="https://github.com/mmmoussa/Sisi-Fighter">here</a></li>
-                            <li class="text">Download the game for Mac <a href="Sisi Fighter.zip">here</a></li>
-                            <li class="text">Download the game for Windows <a href="Sisi Fighter Windows.zip">here</a></li>
+                            <li class="text">Download the game for Mac <a href="files/Sisi Fighter.zip">here</a></li>
+                            <li class="text">Download the game for Windows <a href="files/Sisi Fighter Windows.zip">here</a></li>
                         </ul>
                     </div>
                 </div>
@@ -101,8 +101,8 @@
                             <li class="text">I built the game TicTacToe to be played in the terminal</li>
                             <li class="text">The game can be played against a friend or a computer</li>
                             <li class="text">The game keeps track of each player's score as well as the ties, and switches the turn order each round to keep things fair</li>
-                            <li class="text">Download the game for Mac <a href="Terminal TicTacToe.zip">here</a></li>
-                            <li class="text">Download the game for Windows <a href="W_Terminal.exe">here</a></li>
+                            <li class="text">Download the game for Mac <a href="files/Terminal TicTacToe.zip">here</a></li>
+                            <li class="text">Download the game for Windows <a href="files/W_Terminal.exe">here</a></li>
                             <li class="text">Check out the code <a href="https://github.com/mmmoussa/TicTacToe">here</a></li>
                         </ul>
                     </div>
@@ -116,9 +116,9 @@
                             <li class="text">This project was completed as part of the SYDE 101L Graphics Lab course</li>
                         </ul>
                         <div class="row">
-                            <div class="col-md-4"><img src="Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
-                            <div class="col-md-4"><img src="Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
-                            <div class="col-md-4"><img src="Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
+                            <div class="col-md-4"><img src="images/Firestrike1.JPG" alt="Firestrike image 1" class="nerf-pic"></div>
+                            <div class="col-md-4"><img src="images/Firestrike3.JPG" alt="Firestrike image 2" class="nerf-pic"></div>
+                            <div class="col-md-4"><img src="images/Firestrike2.JPG" alt="Firestrike image 3" class="nerf-pic"></div>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                             <li class="text">Won the award for the best use of the City of Kitchener's open data</li>
                             <li class="text">Check out the code we wrote <a href="https://github.com/mmmoussa/Citivate_backend">here</a></li>
                         </ul>
-                        <img src="logo.png" alt="Citivate logo" class="logo-pic"/>
+                        <img src="images/logo.png" alt="Citivate logo" class="logo-pic"/>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -147,7 +147,7 @@
                             <li class="text">Check out the game <a href="http://jhudson.ca/myorunaway/">here</a></li>
                             <li class="text">Check out the Myo scripts <a href="https://github.com/mmmoussa/Lua-scripts">here</a></li>
                         </ul>
-                        <img src="Myo_runaway_screenshot.png" alt="Myo Runaway game" class="myo-game-pic"/>
+                        <img src="images/Myo_runaway_screenshot.png" alt="Myo Runaway game" class="myo-game-pic"/>
                     </div>
                 </div>
                 <div class="clearfix visible-md-block visible-lg-block"></div>
