Made small style changes and added one skill

--- a/skills.html
+++ b/skills.html
@@ -87,7 +87,7 @@
                             <div class="text">Bootstrap</div>
                             <div class="text">Tkinter</div>
                             <div class="text">Django</div>
-                            <br class="text">
+                            <div class="text">Flask</div>
                     </div>
                 </div>
             </div>      
