Added StudySpaceUW and StudyStarter projects to website

--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,35 @@
                 <h1 class="pageTitle">My projects</h1>
             </div>
             <div class="row">
+                <div class="col-md-12">
+                    <div class="Group">
+                        <p class="lead">2015: StudySpaceUW</p>
+                        <ul>
+                            <li class="text">For this project, I created a website where University of Waterloo students can find out which classrooms on campus are not being used for classes, thus making them possibly available for studying</li>
+                            <li class="text">The website was created using HTML, CSS, and the Django framework</li>
+                            <li class="text">This project makes use of the University of Waterloo's open api</li>
+                            <li class="text">This project was initiated and executed to the point of a functioning website during the 20-hour-long EngHack 2015 hackathon</li>
+                            <li class="text">This project can be viewed at <a href="http://studyspaceuw.com">studyspaceuw.com</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="Group">
+                        <p class="lead">2015: StudyStarter</p>
+                        <ul>
+                            <li class="text">For this project, my team and I created a website where researchers could post studies they wanted to undertake and the public could view these studies, filter through them, and find the necessary information they needed</li>
+                            <li class="text">People looking to participate in a study could also have an email sent to them with all of the important details of the study</li>
+                            <li class="text">The website was created using HTML, CSS, and the MEAN stack, and it integrated the <a href="https://www.mailjet.com">mailjet</a> api</li>
+                            <li class="text">This project was initiated and executed during the 24-hour-long <a href="http://mchacks.io">McHacks 2015</a> hackathon</li>
+                            <li class="text">This project is not live</li>
+                        </ul>
+                        <div class="row">
+                            <div class="col-md-4"><img src="images/studystarter_home.png" alt="StudyStarter Home Page" class="study-pic"></div>
+                            <div class="col-md-4"><img src="images/studystarter_study.png" alt="StudyStarter Study Page" class="study-pic"></div>
+                            <div class="col-md-4"><img src="images/studystarter_email.png" alt="StudyStarter Email" class="study-pic"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-6">
                     <div class="Group">
                         <p class="lead">2015: Smiley No More</p>
