Updated description of study starter

--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,7 @@
                             <li class="text">For this project, my team and I created a website where researchers could post studies they wanted to undertake and the public could view these studies, filter through them, and find the necessary information they needed</li>
                             <li class="text">People looking to participate in a study could also have an email sent to them with all of the important details of the study</li>
                             <li class="text">The website was created using HTML, CSS, and the MEAN stack, and it integrated the <a href="https://www.mailjet.com">mailjet</a> api</li>
+                            <li class="text">My role on this team was to do the front-end as well as to work on the api integration</li>
                             <li class="text">This project was initiated and executed during the 24-hour-long <a href="http://mchacks.io">McHacks 2015</a> hackathon</li>
                             <li class="text">This project is not live</li>
                         </ul>
