--- a/project_pages/TerminalTicTacToe.html
+++ b/project_pages/TerminalTicTacToe.html
@@ -38,10 +38,10 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a class="navbar-text" href="index"><i class="fa fa-user"></i> About</a></li>
-                        <li><a class="navbar-text" href="skills"><i class="fa fa-code"></i> Skills</a></li>
-                        <li class="active"><a class="navbar-text" href="projects"><i class="fa fa-wrench"></i> Projects</a></li>
-                        <li><a class="navbar-text" href="contact"><i class="fa fa-envelope"></i> Contact</a></li>
+                        <li><a class="navbar-text" href="../index"><i class="fa fa-user"></i> About</a></li>
+                        <li><a class="navbar-text" href="../skills"><i class="fa fa-code"></i> Skills</a></li>
+                        <li class="active"><a class="navbar-text" href="../projects"><i class="fa fa-wrench"></i> Projects</a></li>
+                        <li><a class="navbar-text" href="../contact"><i class="fa fa-envelope"></i> Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
